# customer-churn-analysis

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_analysis.py
.github/workflows/: ci.yml
config/: settings.py
docker/: Dockerfile  Dockerfile.jupyter  docker-compose.yml  nginx.conf
docs/: API.md  EXAMPLES.md  README.md
notebooks/: customer_churn_analysis.ipynb
scripts/: deploy.sh
src/: __init__.py  association_rules.py  clustering.py  data_loader.py  feature_engineering.py  visualization.py
src/utils/: .gitignore  __init__.py  helpers.py  logger.py  performance.py
tests/: __init__.py  performance_test.py  test_data_loader.py
